test/sema/typeck/pattern/lit-float-wrong-type.out
error: Bool expected but got type Float32.
--> lit-float-wrong-type.dora:2:14
 | fn f(x: (String, Bool)) {
 |     let (_y, 2.0f32) = x;
                ~~~~~~
 | }
 | 
1 error found.
