test/sema/typeck/pattern/lit-float-wrong-type.dora
fn f(x: (String, Bool)) {
    let (_y, 2.0f32) = x;
}
